--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
     <application
         android:icon="@mipmap/ic_launcher"
         android:allowBackup="true"
-        android:label="Расписание МГКЦТ">
+        android:label="Расписание МГКЦТ"
+        android:theme="@style/Theme.Schedule">
         
         <activity
             android:name=".MainActivity"
