Remove generated files from git tracking and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,10 @@ app/src/main/res/mipmap-*/ic_launcher.png
 app/src/main/res/mipmap-*/ic_launcher_round.png
 app/src/main/res/mipmap-*/ic_launcher_foreground.png
 app/src/main/res/mipmap-*/ic_launcher_background.png
+app/src/main/res/mipmap-*/*.webp
+app/src/main/ic_launcher-playstore.png
+
+# Gradle wrapper
+gradle/wrapper/gradle-wrapper.jar
+gradlew
+gradlew.bat
